docker/envoy/envoy.yaml
static_resources:
  listeners:
    - name: synthetic_http
      address:
        socket_address: {address: 0.0.0.0, port_value: 8080}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: synthetic
                normalize_path: true
                route_config:
                  name: synthetic_routes
                  virtual_hosts:
                    - name: apis
                      domains: ["*"]
                      routes:
                        - match: {path: /public}
                          route: {cluster: normal_api}
                        - match: {path: /sensitive/export}
                          route: {cluster: sensitive_api}
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      status_on_error: {code: ServiceUnavailable}
                      http_service:
                        server_uri:
                          uri: http://adapter:8081
                          cluster: adapter_authz
                          timeout: 1s
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: x-lab-session
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: adapter_authz
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: adapter_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: adapter, port_value: 8081}
    - name: normal_api
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: normal_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: normal-api, port_value: 8080}
    - name: sensitive_api
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: sensitive_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: sensitive-api, port_value: 8080}
